crates/keron-lang/tests/corpus/errors/parse/for_no_iterable.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: found 'e' expected '#', or '"'
  --> 2:13
  |
2 | for x in { reconcile x }
  |             ^
